[package]
authors = ["Darius C", "Rust-IPFS contributors"]
rust-version = "1.70"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rust-ipfs"
readme = "README.md"
repository = "https://github.com/dariusc93/rust-ipfs"
description = "IPFS node implementation"
version = "0.11.4"

[features]

default = []

experimental_stream = ["dep:libp2p-stream"]

beetle_bitswap = ["dep:beetle-bitswap-next"]
libp2p_bitswap = ["dep:libp2p-bitswap-next"]
libp2p_bitswap_compat = ["libp2p_bitswap", "libp2p-bitswap-next?/compat"]

sled_data_store = ["dep:sled"]
redb_data_store = ["dep:redb"]
test_go_interop = []
test_js_interop = []

[workspace.dependencies]

asynchronous-codec = "0.7.0"
libp2p = { version = "0.53" }
libp2p-stream = { version = "0.1.0-alpha" }
beetle-bitswap-next = { version = "0.5.1", path = "packages/beetle-bitswap-next" }
libp2p-bitswap-next = { version = "0.26.1", path = "packages/libp2p-bitswap-next" }
rust-unixfs = { version = "0.4.1", path = "unixfs" }
libipld = { version = "0.16", features = ["serde-codec"] }
clap = { version = "4.3", features = ["derive"] }
rust-ipns = { version = "0.5", path = "packages/rust-ipns" }
chrono = { version = "0.4.35" }
libp2p-relay-manager = { version = "0.2.1", path = "packages/libp2p-relay-manager" }

redb = { version = "1.3" }
futures-timer = "3.0"
bytes = "1"

quick-protobuf = { version = "0.8" }
quick-protobuf-codec = "0.3"

unsigned-varint = { version = "0.7.1", features = ["asynchronous_codec"] }

futures-bounded = { version = "0.2" }

[dependencies]
asynchronous-codec.workspace = true
anyhow = "1.0"
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
base64 = { default-features = false, features = ["alloc"], version = "0.21" }
beetle-bitswap-next = { workspace = true, optional = true }
libp2p-bitswap-next = { workspace = true, optional = true }
byteorder = { default-features = false, version = "1" }
bytes = { workspace = true }
libipld.workspace = true
hickory-resolver = "0.24.0"
either = { version = "1" }
futures = { version = "0.3" }
futures-bounded.workspace = true

redb = { workspace = true, optional = true }
rust-unixfs = { workspace = true }

rust-ipns = { workspace = true }
libp2p-relay-manager = { workspace = true }

chrono.workspace = true

libp2p = { features = [
    "gossipsub",
    "autonat",
    "relay",
    "dcutr",
    "identify",
    "kad",
    "websocket",
    "tcp",
    "macros",
    "tokio",
    "noise",
    "ping",
    "yamux",
    "dns",
    "mdns",
    "ed25519",
    "secp256k1",
    "ecdsa",
    "rsa",
    "serde",
    "request-response",
    "json",
    "cbor",
    "rendezvous",
    "upnp",
    "quic",
], workspace = true }

libp2p-allow-block-list = "0.3"
libp2p-stream = { workspace = true, optional = true }

parking_lot = "0.12"
serde = { default-features = false, features = ["derive"], version = "1.0" }
serde_json = { default-features = false, features = ["std"], version = "1.0" }

thiserror = { default-features = false, version = "1.0" }
tokio = { features = ["full"], version = "1" }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = { default-features = false, features = ["log"], version = "0.1" }
tracing-futures = { default-features = false, features = [
    "std-future",
    "std",
    "futures-03",
], version = "0.2" }

async-broadcast = "0.6"

void = { default-features = false, version = "1.0" }
fs2 = "0.4"
sled = { version = "0.34", optional = true }

rlimit = "0.10"

wasm-timer = "0.2"
futures-timer.workspace = true

rand = "0.8"

zeroize = "1"

quick-protobuf.workspace = true
quick-protobuf-codec.workspace = true
unsigned-varint.workspace = true

[dev-dependencies]
criterion = { default-features = false, version = "0.5" }
hex-literal = { default-features = false, version = "0.4" }
sha2 = { default-features = false, version = "0.10" }
tokio = { features = ["full"], version = "1" }
rustyline-async = { version = "0.4" }
tracing-subscriber = { default-features = false, features = [
    "fmt",
    "tracing-log",
    "ansi",
    "env-filter",
], version = "0.3" }
rand = { default-features = false, version = "0.8", features = [
    "std",
    "std_rng",
] }
tempfile = "3.1.0"

clap = { workspace = true }

[profile.dev.build-override]
debug = true

[workspace]
members = ["packages/*", "unixfs"]
exclude = ["archived", "deprecated/*"]

resolver = "2"
