[package]
authors = ["Rust-IPFS contributors"]
description = "UnixFs tree support"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rust-unixfs"
readme = "README.md"
repository = "https://github.com/dariusc93/rust-ipfs"
version = "0.4.1"

[features]
default = ["filetime"]

[dependencies]
libipld = "0.16"
either = { default-features = false, version = "1.8" }
filetime = { optional = true, version = "0.2" }
quick-protobuf = { default-features = false, features = [
    "std",
], version = "0.8" }
sha2 = { default-features = false, version = "0.10" }

[dev-dependencies]
hex-literal = { default-features = false, version = "0.4" }
libc = { default-features = false, version = "0.2" }
multibase = { default-features = false, version = "0.9" }
tar = { default-features = false, version = "0.4" }
criterion = { default-features = false, version = "0.4" }

[[bench]]
name = "ingest-tar"
harness = false

[[bench]]
name = "adder"
harness = false
