[package]
authors = ["Rust-IPFS contributors"]
description = "UnixFs tree support"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rust-unixfs"
readme = "README.md"
repository = "https://github.com/dariusc93/rust-ipfs"
version = "0.5.0"

[features]
default = ["filetime"]

[dependencies]
ipld-core = "0.4.1"
ipld-dagpb = "0.2.1"
multihash = "0.19.1"
multihash-codetable = { version = "0.1.3", default-features = false, features = ["std", "sha2"] }
multihash-derive = "0.9.0"

either = { default-features = false, version = "1.13" }
filetime = { optional = true, version = "0.2" }
quick-protobuf = { default-features = false, features = [
    "std",
], version = "0.8" }
sha2 = { default-features = false, version = "0.10" }

[dev-dependencies]
hex-literal = { default-features = false, version = "0.4" }
libc = { default-features = false, version = "0.2" }
multibase = { default-features = false, version = "0.9" }
tar = { default-features = false, version = "0.4" }
criterion = { default-features = false, version = "0.5" }

[[bench]]
name = "ingest-tar"
harness = false

[[bench]]
name = "adder"
harness = false
