[package]
authors = ["Rust-IPFS contributors"]
description = "UnixFs tree support"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rust-unixfs"
readme = "README.md"
repository = "https://github.com/dariusc93/rust-ipfs"
version = "0.5.0"

[features]
default = ["filetime"]

[dependencies]
ipld-core = "0.4.1"
ipld-dagpb = "0.2.1"
multihash = "0.19.3"
multihash-codetable = { version = "0.1.4", default-features = false, features = ["std", "sha2"] }
multihash-derive = "0.9.1"

either = { default-features = false, version = "1.13.0" }
filetime = { optional = true, version = "0.2.25" }
quick-protobuf = { version = "0.8.1" }
sha2 = { default-features = false, version = "0.10.2" }

[dev-dependencies]
hex-literal = { default-features = false, version = "0.4.1" }
libc = { default-features = false, version = "0.2.169" }
multibase = { default-features = false, version = "0.9.1" }
tar = { default-features = false, version = "0.4.43" }
criterion = { default-features = false, version = "0.5.1" }

[[bench]]
name = "ingest-tar"
harness = false

[[bench]]
name = "adder"
harness = false
