[package]
name = "wasm-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rust-ipfs = { path = "../.." }
futures = "0.3"
anyhow = "1.0.93"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Response', 'Window'] }
js-sys = "0.3.70"
console_error_panic_hook = "0.1.7"
ipld-core.workspace = true